--- a/profile/index.html
+++ b/profile/index.html
@@ -311,7 +311,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const cancelBtn = document.getElementById('deleteCancel');
 
   let currentLogin = null;
-  const keyword = 'delete';
+  const keyword = 'smazat';
 
   document.addEventListener('click', (e) => {
     const btn = e.target.closest('button[data-login]');
