--- a/profile/index.html
+++ b/profile/index.html
@@ -275,27 +275,30 @@ async function loadGameAccounts() {
   data.accounts.forEach(acc => {
     const row = document.createElement('div');
     row.className = 'mini-row';
+    if (acc.is_primary == 1) {
+  row.classList.add('primary-account');
+}
     row.innerHTML = `
-      <strong>Account:</strong> ${acc.login}
-      <span class="tag">${acc.chars_count} characters</span>
-      <span class="tag">${acc.created_at}</span>
+  <strong>Account:</strong> ${acc.login}
+  <span class="tag">${acc.chars_count} characters</span>
+  <span class="tag">${acc.created_at}</span>
 
-      <div class="actions">
-  ${
-    acc.is_primary == 1
-      ? '<span class="tag primary">Primary</span>'
-      : `<button class="btn btn-small" data-primary="${acc.login}">
-           Primární
-         </button>`
-  }
-  <button class="btn btn-small btn-danger" data-login="${acc.login}">
-    Smazat účet
-  </button>
-  <button class="btn btn-small" data-reset="${acc.login}">
-    Změna hesla
-  </button>
-</div>
-    `;
+  <div class="actions">
+    ${
+      acc.is_primary == 1
+        ? '<span class="tag primary">PRIMARY</span>'
+        : `<button class="btn btn-small" data-primary="${acc.login}">
+             Primární
+           </button>`
+    }
+    <button class="btn btn-small btn-danger" data-login="${acc.login}">
+      Delete
+    </button>
+    <button class="btn btn-small" data-reset="${acc.login}">
+      Změna hesla
+    </button>
+  </div>
+`;
     list.appendChild(row);
   });
 }
