--- a/profile/index.html
+++ b/profile/index.html
@@ -260,7 +260,7 @@ async function loadGameAccounts() {
 
   const data = await res.json();
 
-  /* always update account count */
+  /* update account count */
   if (countEl) {
     countEl.textContent = `(${data.accounts.length} / 10)`;
   }
@@ -273,36 +273,44 @@ async function loadGameAccounts() {
   }
 
   data.accounts.forEach(acc => {
+
+    /* 🔑 TADY je ta oprava – normalizace hodnoty */
+    const isPrimary = Number(acc.is_primary) === 1;
+
     const row = document.createElement('div');
     row.className = 'mini-row';
-    if (acc.is_primary == 1) {
-  row.classList.add('primary-account');
-}
-    row.innerHTML = `
-  <strong>Account:</strong> ${acc.login}
-  <span class="tag">${acc.chars_count} characters</span>
-  <span class="tag">${acc.created_at}</span>
 
-  <div class="actions">
-    ${
-      acc.is_primary == 1
-        ? '<span class="tag primary">PRIMARY</span>'
-        : `<button class="btn btn-small" data-primary="${acc.login}">
-             Primární
-           </button>`
+    if (isPrimary) {
+      row.classList.add('primary-account');
     }
-    <button class="btn btn-small btn-danger" data-login="${acc.login}">
-      Delete
-    </button>
-    <button class="btn btn-small" data-reset="${acc.login}">
-      Změna hesla
-    </button>
-  </div>
-`;
+
+    row.innerHTML = `
+      <strong>Account:</strong> ${acc.login}
+      <span class="tag">${acc.chars_count} characters</span>
+      <span class="tag">${acc.created_at}</span>
+
+      <div class="actions">
+        ${
+          isPrimary
+            ? '<span class="tag primary">PRIMARY</span>'
+            : `<button class="btn btn-small" data-primary="${acc.login}">
+                 Primární
+               </button>`
+        }
+        <button class="btn btn-small btn-danger" data-login="${acc.login}">
+          Smazat účet
+        </button>
+        <button class="btn btn-small" data-reset="${acc.login}">
+          Změna hesla
+        </button>
+      </div>
+    `;
+
     list.appendChild(row);
   });
 }
 </script>
+
 
 
 
