--- a/profile/index.html
+++ b/profile/index.html
@@ -273,45 +273,42 @@ async function loadGameAccounts() {
   }
 
   data.accounts.forEach(acc => {
+  const row = document.createElement('div');
+  row.className = 'mini-row';
 
-    /* 🔑 TADY je ta oprava – normalizace hodnoty */
-    const isPrimary = Number(acc.is_primary) === 1;
+  const isPrimary = Number(acc.is_primary) === 1;
 
-    const row = document.createElement('div');
-    row.className = 'mini-row';
+  if (isPrimary) {
+    row.classList.add('primary-account');
+  }
 
-    if (isPrimary) {
-      row.classList.add('primary-account');
-    }
+  row.innerHTML = `
+    <strong>
+      ${isPrimary ? '⭐ ' : ''}Account:
+    </strong> ${acc.login}
 
-    row.innerHTML = `
-      <strong>
-  ${acc.is_primary == 1 ? '⭐ ' : ''}
-  Account:
-</strong> ${acc.login}
+    <span class="tag">${acc.chars_count} characters</span>
+    <span class="tag">${acc.created_at}</span>
 
-      <span class="tag">${acc.chars_count} characters</span>
-      <span class="tag">${acc.created_at}</span>
+    <div class="actions">
+      ${
+        isPrimary
+          ? '<span class="tag primary">PRIMARY</span>'
+          : `<button class="btn btn-small" data-primary="${acc.login}">
+               Primární
+             </button>`
+      }
+      <button class="btn btn-small btn-danger" data-login="${acc.login}">
+        Smazat
+      </button>
+      <button class="btn btn-small" data-reset="${acc.login}">
+        Změnit heslo
+      </button>
+    </div>
+  `;
 
-      <div class="actions">
-        ${
-          isPrimary
-            ? '<span class="tag primary">PRIMARY</span>'
-            : `<button class="btn btn-small" data-primary="${acc.login}">
-                 Primární
-               </button>`
-        }
-        <button class="btn btn-small btn-danger" data-login="${acc.login}">
-          Smazat účet
-        </button>
-        <button class="btn btn-small" data-reset="${acc.login}">
-          Změna hesla
-        </button>
-      </div>
-    `;
-
-    list.appendChild(row);
-  });
+  list.appendChild(row);
+});
 }
 </script>
 
