--- a/profile/index.html
+++ b/profile/index.html
@@ -143,8 +143,8 @@
     <input id="bugTitle" type="text" maxlength="120" required>
 
     <label>Popis problému</label>
-    <textarea id="bugMessage" rows="6" maxlength="2000" required></textarea>
-
+    <textarea id="bugMessage" rows="6" maxlength="1000" required></textarea>
+    <div id="bugCounter" class="char-counter">0 / 1000</div>
     <button class="btn btn-primary" type="submit">
       Odeslat hlášení
     </button>
@@ -533,7 +533,10 @@ document.getElementById('bugForm')?.addEventListener('submit', async (e) => {
     title: document.getElementById('bugTitle').value.trim(),
     message: document.getElementById('bugMessage').value.trim()
   };
-
+  if (payload.message.length > 1000) {
+  notify('error', 'Text je příliš dlouhý (max. 1000 znaků)');
+  return;
+}
   const res = await fetch('/api/create_bug_report.php', {
     method: 'POST',
     headers: {'Content-Type':'application/json'},
@@ -551,6 +554,32 @@ document.getElementById('bugForm')?.addEventListener('submit', async (e) => {
 });
 </script>
 
+<script>
+(() => {
+  const textarea = document.getElementById('bugMessage');
+  const counter  = document.getElementById('bugCounter');
+  const max = 1000;
+
+  if (!textarea || !counter) return;
+
+  const update = () => {
+    const len = textarea.value.length;
+    counter.textContent = `${len} / ${max}`;
+
+    counter.classList.remove('warning', 'danger');
+
+    if (len > 800) {
+      counter.classList.add('warning');
+    }
+    if (len > 950) {
+      counter.classList.add('danger');
+    }
+  };
+
+  textarea.addEventListener('input', update);
+  update();
+})();
+</script>
 
 
 </body>
