--- a/profile/index.html
+++ b/profile/index.html
@@ -140,7 +140,7 @@
     </select>
 
     <label>Název problému</label>
-    <input id="bugTitle" type="text" maxlength="120" required>
+    <input id="bugTitle" type="text" maxlength="20" required>
 
     <label>Popis problému</label>
     <textarea id="bugMessage" rows="6" maxlength="1000" required></textarea>
@@ -566,14 +566,14 @@ document.getElementById('bugForm')?.addEventListener('submit', async (e) => {
     const len = textarea.value.length;
     counter.textContent = `${len} / ${max}`;
 
-    counter.classList.remove('warning', 'danger');
+   counter.classList.remove('warning', 'danger');
 
-    if (len > 800) {
-      counter.classList.add('warning');
-    }
-    if (len > 950) {
-      counter.classList.add('danger');
-    }
+if (len > 950) {
+  counter.classList.add('danger');
+} else if (len > 800) {
+  counter.classList.add('warning');
+}
+
   };
 
   textarea.addEventListener('input', update);
