--- a/profile/index.html
+++ b/profile/index.html
@@ -13,6 +13,12 @@
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth">
     <a href="/profile/index.html" class="btn active">Profil</a>
+    <a href="/admin/index.html"
+   id="adminBtn"
+   class="btn btn-warning"
+   style="display:none;">
+  Admin panel
+</a>
     <a href="/api/logout.php?lang=cs" class="btn">Odhlásit se</a>
   </div>
 </header>
@@ -140,7 +146,7 @@
     </select>
 
     <label>Název problému</label>
-    <input id="bugTitle" type="text" maxlength="20" required>
+    <input id="bugTitle" type="text" maxlength="40" required>
 
     <label>Popis problému</label>
     <textarea id="bugMessage" rows="6" maxlength="1000" required></textarea>
@@ -579,6 +585,19 @@ if (len > 950) {
   textarea.addEventListener('input', update);
   update();
 })();
+</script>
+<script>
+fetch('/api/me.php', { credentials: 'same-origin' })
+  .then(res => res.json())
+  .then(data => {
+    if (data.ok && data.role === 'admin') {
+      const btn = document.getElementById('adminBtn');
+      if (btn) btn.style.display = 'inline-block';
+    }
+  })
+  .catch(() => {
+    // nic – když se nepovede, admin panel se prostě neukáže
+  });
 </script>
 
 
