oprava snad to bude lepší ..

--- a/profile/index.html
+++ b/profile/index.html
@@ -15,8 +15,8 @@
     <a href="/profile/index.html" class="btn active">Profil</a>
     <a href="/admin/index.html"
    id="adminBtn"
-   class="btn btn-warning"
-   style="display:none;">
+   class="btn"
+   style="display:none; background:#8b6f1a;">
   Admin panel
 </a>
     <a href="/api/logout.php?lang=cs" class="btn">Odhlásit se</a>
@@ -123,6 +123,16 @@
         <a href="#" class="link-item">Hlasování #4</a>
       </div>
     </section>
+
+      <section id="donate" class="profile-card panel">
+  <h2>Podpora serveru</h2>
+  <p class="muted">Žádné pay-to-win. Zde budou informace k podpoře serveru.</p>
+
+  <div class="donate-box">
+    <div><strong>IBAN:</strong> XXXX XXXX XXXX</div>
+    <div><strong>Zpráva pro příjemce:</strong> tvůj e-mail / účet</div>
+  </div>
+</section>
 
     <section id="support" class="profile-card panel">
   <h2>Hlášení bugů</h2>
